# Splinter-Net

./: Cargo.toml  LICENSE  README.md  backend.py  frontend.py  main.py
src/: apps.rs  config.rs  gui.rs  main.rs
src/backend/: linux.rs  mod.rs
