[package]
name = "splinter-net"
version = "0.1.0"
edition = "2021"
description = "Assign network interfaces to applications using Linux network namespaces"
license = "MIT"

[dependencies]
eframe = "0.27"
egui = "0.27"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
thiserror = "1.0"
